--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 
     <!-- md 代码高亮 -->
-    <script src="https://cdn.jsdelivr.net/npm/highlight.js@9.18.1/lib/index.min.js"></script> 
+    <script src="https://cdn.bootcss.com/highlight.js/9.15.6/highlight.min.js"></script> 
     
   </head>
   <body>
